# unpin_python

./: .gemini-ignore  .gitignore  GEMINI.md  README.md  database.py  devenv.nix  go.mod  main.go  main.py  pyproject.toml  report.py  requirements.txt  reset.py  scan.py  search.py
fix_hatchling/: .gitignore  main.py  requirements.txt
tests/: test_database.py  test_main.py  test_scan.py  test_search.py
unpin_python/: database.py  main.py  report.py  reset.py  scan.py  search.py
